--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="%PUBLIC_URL%/dist/css/adminlte.min.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/plugins/toastr/toastr.min.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/plugins/jquery-ui/jquery-ui.min.css">
+  <!-- <link rel="stylesheet" href="%PUBLIC_URL%/plugins/daterangepicker/daterangepicker.css"> -->
 
   <title>React App</title>
   <style>
@@ -47,11 +49,18 @@
 
   <!-- jQuery -->
   <script src="%PUBLIC_URL%/plugins/jquery/jquery.min.js"></script>
+  <script src="%PUBLIC_URL%/plugins/jquery-ui/jquery-ui.min.js"></script>
+  <script src="%PUBLIC_URL%/plugins/moment/moment.min.js"></script>
+  <!-- <script src="%PUBLIC_URL%/plugins/daterangepicker/daterangepicker.js"></script> -->
   <!-- Bootstrap 4 -->
   <script src="%PUBLIC_URL%/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="%PUBLIC_URL%/dist/js/adminlte.js"></script>
 <script src="%PUBLIC_URL%/plugins/toastr/toastr.min.js"></script>
 
-</body>
+<!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script> -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
+</body>
 </html>
